- dashboard links
  - processing
  - mark_name
- dashboard groups
  - no show if filed is empty
  - group photo
  - filter: report/entiry
  - entity show friendly
  - report show friendly
  - add a column to show which accounts provided the group
- dashboard accounts
  - add account
- component table
  - sort
  - search
  - pagination

## Fixed Bugs

- pagination data not refreshing in groups page

## TODO

- [ ] dashboard links
  - [x] opt(means optimize): only click chatName in processed
  - [ ] opt: filter status
- [ ] dashboard groups
  - [x] opt: table view
  - [x] opt: grid view
  - [ ] opt: detail view
  - [x] opt: entity show icon of the meme
  - [ ] check: block by account_chat.status
  - [ ] check: recommend view
- [ ] dashboard accounts
  - [ ] show added groups
  - [ ] opt: add account
- [ ] component table
  - [x] sort global data by column
  - [ ] search global data by column
  - [ ] opt: hint no rows
  - [ ] opt: sort arrow show when sorted
- [ ] bugs
  - [ ] table data remove duplicates


# 2025-01-21

## TODO 

- [x] opt: quality evaluation
  - [ ] based on chat_metadata new filed
  - [ ] schedual store in quality_score
- [x] opt: add ai_about in chat_metadata
  - [ ] based on chat_metadata name, about, pinned_message...
- [x] opt: doxx_twtter 
  - [ ] schedual and random select one to recommend

# 2025-01-22

- [ ] dashboard v2
  - [ ] group table: filter account 
  - [ ] group deatil: show quality score

# 2025-01-23, 2025-01-24

- [ ] tg login
  - [ ] backend db
- [x] add account 
  - [ ] get code UI 
  - [ ] redis.lpush(request)
  - [ ] redis.set(phone_code)
  - [ ] redis.get(phone_code_status), status: success, error, cancel.

- [ ] table: category, 
  - [x] fix quality_score
  - [x] add category multi-select
  - [x] fix entity


- [ ] detailed view: 
  - [x] add category
  - [x] add quality
  - [x] members
  - [x] ai_about
  - [x] remove monitor bot
  - [x] add account
  - [x] fix entity
  - [x] add pinned messages
  - [x] add latest messages