@@ -198,6 +198,7 @@ export async function getChatMetadataWithAccounts(
       about: chatMetadata.about,
       username: chatMetadata.username,
       participantsCount: chatMetadata.participantsCount,
+      category: chatMetadata.category,
       entity: chatMetadata.entity,
       qualityScore: chatMetadata.qualityScore,
       isBlocked: chatMetadata.isBlocked,
@@ -222,6 +223,7 @@ export async function getChatMetadataWithAccounts(
       name: chatMetadata.name,
       about: chatMetadata.about,
       participantsCount: chatMetadata.participantsCount,
+      category: chatMetadata.category,
       'entity.name': sql`${chatMetadata.entity}->>'name'`,
       qualityScore: chatMetadata.qualityScore,
       isBlocked: chatMetadata.isBlocked,
