@@ -91,3 +91,12 @@
   - [x] fix entity
   - [x] add pinned messages
   - [x] add latest messages
+
+# 2025-01-25
+
+- [ ] dashboard 
+  - [ ] show message use markdown
+  - [ ] show message add message reactions 和 message buttons
+  - [ ] show message del sender_id, message_id
+  - [x] add category show table
+  - [ ] kol社群这块需要加个1. 各个判断标准和相应得分 2. 给项目方打广告的记录和次数 3. KOL的风格总结
